# ebpf-profiling

./: .gitignore  README.md
src/: .gitignore  Makefile  core_fixes.bpf.h  cpu_info.bpf.c  cpu_info.c  cpu_info.h  disk_usage.bpf.c  disk_usage.c  meson.build  meson1.build  minimal.bpf.c  network.bpf.c  network.c  sysprof.c
src/.cache/clangd/index/: sysprof.c.BC0CE686ACC1E7A6.idx
src/ebpf/: meson.build  sysprof-bpf.skel.h  sysprof-ebpf.h  sysprof.c
